Git_WGBH_QC/src/objects/Batch_Job__c.object
<CustomObject>
    <description>This is a temporary table where email creates a record to fire a trigger which triggers a batch job</description>
    <fields>
        <fullName>Batch_Job_Name__c</fullName>
        <label>Batch Job Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Name__c</fullName>
        <label>Chain Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Index__c</fullName>
        <label>Object Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Job</label>
    <nameField>
        <displayFormat>BJ-{00000}</displayFormat>
        <label>Batch Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>